# approx-image-gen

./: .gitignore  Cargo.toml  README.md  index.html
src/: algorithms.rs  algorithms_wasm.rs  generations.rs  lib.rs  main.rs  mutations.rs  renderer.rs  renderer_wasm.rs  scoring.rs  types.rs  wasm_bindings.rs
web/: index.html  main.js  style.css  worker.js
