[package]
name = "approx-image-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["dep:imageproc"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook", "dep:getrandom"]

[dependencies]
image = "0.25.9"
rand = "0.9.2"

# CLI-only dependencies
imageproc = { version = "0.26.0", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = true
